--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Social | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/slick.css">
@@ -12,6 +13,10 @@
     <script src="js/angular.min.js"></script>
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/placeholder.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/foundation/foundation.topbar.js"></script>
+    <script>$(document).foundation();</script>
     <script src="js/moment.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/wow.js"></script>
@@ -28,6 +33,25 @@
   </head>
 
   <body>
+
+    <!--<div class="fixed">
+  		<nav class="top-bar" data-topbar role="navigation">
+    		<li class="name">
+      			<h1><a href="#">Social Music</a></h1>
+    		</li>
+  		</nav>
+	</div>-->
+
+	<div class="fixed">
+	<nav class="tab-bar df-tab-bar hide-for-large-upx stickyx">
+		<section class="left tab-bar-section">
+			<h1 class="title">
+				<span class="orangex ng-binding">Social Music</span> <span class="dim ng-binding"></span>
+			</h1>
+		</section>
+		<section class="right-small"><a class="right-off-canvas-toggle menu-icon" href=""><span></span></a></section>
+	</nav>
+	</div>
 
   	<div class="animated-page-hero ng-scope">
           
