--- a/main.html
+++ b/main.html
@@ -43,6 +43,7 @@
 	</div>-->
 
 	<div class="fixed">
+	<div class="inner-wrap">
 	<nav class="tab-bar df-tab-bar hide-for-large-upx stickyx">
 		<section class="left tab-bar-section">
 			<h1 class="title">
@@ -51,6 +52,8 @@
 		</section>
 		<section class="right-small"><a class="right-off-canvas-toggle menu-icon" href=""><span></span></a></section>
 	</nav>
+	<aside class="right-off-canvas-menu"><ul class="off-canvas-list"><li><label>Menu</label></li><li><a href="#/">HOME</a></li></ul></aside>
+	</div>
 	</div>
 
   	<div class="animated-page-hero ng-scope">
@@ -70,9 +73,7 @@
                                        <h3 class="sub-hero show-for-large-upx animated fadeInDown _3">
                                        Host your own party</h3> <br>
                                      <div class="animated fadeInDown _4">
-                <a class="button warning animated big rubberBand _8" width: "100" ng-href="mailto:noah@digitalfio.com" ng-hide="loggedInUser" href="mailto:noah@digitalfio.com">    Sign up    </a>
-                					 <div class="animated fadeInDown _4">
-                <a class="button warning animated big rubberBand _8" ng-href="mailto:noah@digitalfio.com" ng-hide="loggedInUser" href="mailto:noah@digitalfio.com">    Sign in    </a>
+                <a class="button warning animated big rubberBand _8" ng-href="mailto:noah@digitalfio.com" ng-hide="loggedInUser" href="mailto:noah@digitalfio.com">    Let's Party    </a>
                                          
                                      </div>
 
