--- a/main.html
+++ b/main.html
@@ -74,6 +74,7 @@
                                        Host your own party</h3> <br>
                                      <div class="animated fadeInDown _4">
                 <a class="button warning animated big rubberBand _8" ng-href="mailto:noah@digitalfio.com" ng-hide="loggedInUser" href="mailto:noah@digitalfio.com">    Let's Party    </a>
+                <a class="button warning animated big rubberBand _8" ng-href="mailto:noah@digitalfio.com" ng-hide="loggedInUser" href="mailto:noah@digitalfio.com">    Enter a Party    </a>
                                          
                                      </div>
 
